		- find and notate where a dependent variable or function f(x,y)
		  crosses a threshold value
		- use the mouse to track values along multiple plots simultaneously
- New terminals and terminal options
	o Terminals that display graphics in the same window as text entry now
	  support pseudo-mousing; i.e. they respond to arrow keys and other
	  hot-key bindings during "pause mouse".
	o New terminal webp generates a single frame or an animation sequence
	  using webp encoding. Frames are generated using pngcairo,
	  then encoded through the WebPAnimEncoder API.
	o New terminal block for text-mode pseudo-graphics uses Unicode block
	  or Braille characters to offer improved resolution compared to the
	  dumb or caca terminals.
	o latex terminals standalone mode updated to work with texlive2023
- Miscellaneous other new features
	o Time unit settings for major and minor axis tics.  For example,
	  minor tic marks can be placed at exactly one month intervals.
	o The character sequence $# in a using specifier evaluates to the total
	  number of columns available in the current line of data.
	  "plot FOO using 0:(column($# - 1))" plots the last-but-one field of each row.
	o keyword binvalue=avg plots the average, rather than the sum, of binned data.
	o "set colorbox bottom" places the color box underneath the plot.
	o "set pm3d spotlight" adds a user-controlled spotlight to the lighting model.
	o New key layout options to force specific width or number of columns.
	  Automatic positioning of the key on the page can be manually tweaked
	  by giving an offset.
	o "set isotropic" adjusts the axis scaling in both 2D and 3D plots such
	  that x, y, and z axes all have the same scale.
	o Text rotation angles are not limited to integral degree values.
	o Data-driven color assignments in plot style "histograms".


		Notes for packagers and testers
		===============================

Obsolete or deprecated components
---------------------------------
