@@ -159,6 +159,7 @@ typedef struct cairo_params_t {
     float ps;
     enum CAIROTRM_id output;	/* format of the graphics produced by cairolatex */
     int resolution;             /* in dpi; CAIROLATEX_PNG only */
+    TBOOLEAN anchor;		/* TRUE = anchor kitty output to top left */
 } cairo_params_t;
 
 #define CAIROEPS_PARAMS_DEFAULT { \
@@ -196,7 +197,7 @@ static const cairo_params_t cairopdf_params_default = CAIROPDF_PARAMS_DEFAULT;
 #define CAIROPNG_PARAMS_DEFAULT { \
     CAIROTERM_PNG, PIXELS, FALSE, FALSE, 1.0, {1.,1.,1.}, 0xffffff, \
     FALSE, BUTT, FALSE, FALSE, NULL, \
-    12, 1.0, 640., 480., 1.0, 1.0, 1.0, FALSE \
+    12, 1.0, 640., 480., 1.0, 1.0, 1.0, FALSE, 0, TRUE\
 }
 static cairo_params_t cairopng_params = CAIROPNG_PARAMS_DEFAULT;
 static const cairo_params_t cairopng_params_default = CAIROPNG_PARAMS_DEFAULT;
@@ -553,6 +554,20 @@ TERM_PUBLIC void cairotrm_options()
 				break;
 			}
 #endif
+#ifdef HAVE_KITTY_TERM
+			if (strncmp(term->name, "kitty", 5) == 0) {
+			    if (equals(c_token, "animate") || equals(c_token, "anchor")) {
+				c_token++;
+				cairo_params->anchor = TRUE;
+				break;
+			    }
+			    if (equals(c_token, "scroll")) {
+				c_token++;
+				cairo_params->anchor = FALSE;
+				break;
+			    }
+			}
+#endif
 
 		default:
 			int_error(c_token, "unrecognized terminal option");
@@ -612,6 +627,10 @@ TERM_PUBLIC void cairotrm_options()
 
 	if (cairo_params->crop)
 		strncat(term_options, " crop", sizeof(term_options)-strlen(term_options)-1);
+
+	if (strncmp(term->name,"kitty",5) == 0)
+	    strncat(term_options, cairo_params->anchor ? " anchor" : " scroll",
+		sizeof(term_options)-strlen(term_options)-1);
 
 	strncat(term_options, cairo_params->enhanced ? " enhanced" : " noenhanced",
 		sizeof(term_options)-strlen(term_options)-1);
@@ -1079,6 +1098,9 @@ void cairotrm_text()
           base64s *b64;
           cairo_surface_t *surface = cairo_get_target(plot.cr);
           /* TODO: crop */
+	  /* Draw starting at top left of screen */
+	  if (cairo_params->anchor)
+		fprintf(gpoutfile,  "\033[H");
           kitty_init(KITTY_FORMAT_PNG);
           b64 = gp_alloc(sizeof(base64s), "base64s");
           init_base64_state_data(b64, kitty_writechar, NULL);
@@ -1541,11 +1563,11 @@ TERM_TABLE_START (kittycairo_driver)
     cairotrm_point, do_arrow, cairotrm_set_font,
     cairotrm_pointsize,
     TERM_BINARY|TERM_CAN_DASH|TERM_ALPHA_CHANNEL|TERM_LINEWIDTH|TERM_FONTSCALE|TERM_POINTSCALE,
-    0 /* suspend */, 0 /* resume */, cairotrm_fillbox, cairotrm_linewidth
+    0 /* suspend */, 0 /* resume */, cairotrm_fillbox, cairotrm_linewidth,
 #ifdef USE_MOUSE
-    , 0, 0, 0, 0, 0
+    term_waitforinput, 0, 0, 0, 0,
 #endif
-    , cairotrm_make_palette, 0 /* cairotrm_previous_palette */, cairotrm_set_color, cairotrm_filled_polygon
+    cairotrm_make_palette, 0 /* cairotrm_previous_palette */, cairotrm_set_color, cairotrm_filled_polygon
     , cairotrm_image
     , cairotrm_enhanced_open, cairotrm_enhanced_flush, cairotrm_enhanced_writec
     , 0, 0, 1.0
@@ -1765,10 +1787,8 @@ START_HELP(pdfcairo)
 "                      {background <rgbcolor>}",
 "                      {size <XX>{unit},<YY>{unit}}",
 "",
-" This terminal supports an enhanced text mode, which allows font and other",
-" formatting commands (subscripts, superscripts, etc.) to be embedded in labels",
-" and other text strings. The enhanced text mode syntax is shared with other",
-" gnuplot terminal types. See `enhanced` for more details.",
+" This terminal processes labels and other text using enhanced formatting",
+" by default.  See `enhanced`.",
 "",
 " The width of all lines in the plot can be modified by the factor <lw>",
 " specified in `linewidth`. The default linewidth is 0.5 points.",
@@ -1777,35 +1797,33 @@ START_HELP(pdfcairo)
 " `rounded` sets line caps and line joins to be rounded;",
 " `butt` is the default, butt caps and mitered joins.",
 "",
-" The default size for the output is 5 inches x 3 inches. The `size` option",
+" The default size for output is 5 inches x 3 inches. The `size` option",
 " changes this to whatever the user requests. By default the X and Y sizes are",
 " taken to be in inches, but other units are possible (currently only cm).",
-" Screen coordinates always run from 0.0 to 1.0 along the full length of the",
-" plot edges as specified by the `size` option.",
-"",
-" <font> is in the format \"FontFace,FontSize\", i.e. the face and the size",
+" `font` is in the format \"FontFace,FontSize\", i.e. the face and the size",
 " comma-separated in a single string. FontFace is a usual font face name, such",
 " as \'Arial\'. If you do not provide FontFace, the pdfcairo terminal will use",
 " \'Sans\'. FontSize is the font size, in points. If you do not provide it,",
 " the pdfcairo terminal will use a nominal font size of 12 points.",
 " However, the default fontscale parameter for this terminal is 0.5,",
-" so the apparent font size is smaller than this if the pdf output is",
-" viewed at full size.",
-"    For example :",
+" so the apparent font size is smaller than the nominal point size if the pdf",
+" output is viewed at full size.",
+"",
+"    Examples :",
 "       set term pdfcairo font \"Arial,12\"",
-"       set term pdfcairo font \"Arial\" # to change the font face only",
-"       set term pdfcairo font \",12\" # to change the font size only",
+"       set term pdfcairo font \"Serif\" # to change the font face only",
+"       set term pdfcairo font \",14\" # to change the font size only",
 "       set term pdfcairo font \"\" # to reset the font name and size",
 "",
 " The fonts are retrieved from the usual fonts subsystems. Under Windows,",
 " those fonts are to be found and configured in the entry \"Fonts\" of the",
 " control panel. Under UNIX, they are handled by \"fontconfig\".",
 "",
-" Pango, the library used to layout the text, is based on utf-8. Thus, the pdfcairo",
-" terminal has to convert from your encoding to utf-8. The default input",
-" encoding is based on your \'locale\'. If you want to use another encoding,",
-" make sure gnuplot knows which one you are using. See `encoding` for more",
-" details.",
+" Pango, the library used to process the text, is based on utf-8.",
+" The pdfcairo terminal will convert from your encoding to utf-8 if needed.",
+" The assumed input encoding is taken from your \'locale\'. If your text actually",
+" uses a different encoding, make sure gnuplot knows which one you are using.",
+" See `encoding` for more details.",
 "",
 " Pango may give unexpected results with fonts that do not respect the unicode",
 " mapping. With the Symbol font, for example, the pdfcairo terminal will use the map",
@@ -1821,12 +1839,9 @@ START_HELP(pdfcairo)
 " OpenOffice Symbol fonts, and remove the Microsoft one.",
 " Other non-conform fonts, such as \"wingdings\" have been observed working.",
 "",
-" The rendering of the plot cannot be altered yet. To obtain the best output",
-" possible, the rendering involves two mechanisms : antialiasing and",
-" oversampling.",
-" Antialiasing allows to display non-horizontal and non-vertical lines",
-" smoother.",
-" Oversampling combined with antialiasing provides subpixel accuracy,",
+" The rendering of the plot involves two mechanisms : antialiasing and",
+" oversampling.  Antialiasing produces smoother non-horizontal and non-vertical",
+" lines.  Oversampling combined with antialiasing provides subpixel accuracy,",
 " so that gnuplot can draw a line from non-integer coordinates. This avoids",
 " wobbling effects on diagonal lines ('plot x' for example).",
 ""
@@ -1917,10 +1932,37 @@ START_HELP(kittycairo)
 "?set term kittycairo",
 "?term kittycairo",
 "?kittycairo",
-" The `kittycairo` terminal device generates output on kitty-compatible terminals",
-" the cairo and pango support libraries.  cairo version >= 1.6 is required.",
+" The `kittycairo` terminal generates in-window output on terminal emulators",
+" that support the kitty graphics protocol.  The actual drawing is done via",
+" cairo, a 2D graphics library, and pango, a library for text rendering.",
+" The kitty protocol is an alternative to sixel graphics, with the advantage",
+" of support for 24-bit RGB colors and slightly lower required bandwidth to",
+" transfer the image data between computer and terminal in a remote session.",
 "",
-" Please read the help for the `pdfcairo` terminal."
+" Syntax:",
+"         set terminal kittycairo",
+"                      {{no}enhanced} {mono|color}",
+"                      {font <font>} {fontscale <scale>}",
+"                      {linewidth <lw>} {rounded|butt|square} {dashlength <dl>}",
+"                      {transparent | background <rgbcolor>}",
+"                      {size <XX>,<YY>} {anchor|scroll}",
+"",
+" This terminal processes labels and other text using enhanced formatting",
+" by default.  See `enhanced`.",
+"",
+" The width of all lines in the plot can be modified by the factor <lw>",
+" specified in `linewidth`.  The font size can similarly be uniformly modified",
+" the scale factor provided by `fontscale`.  For discussion of font and text",
+" encoding options, see the `pdfcairo` terminal."
+"",
+" The option `rounded` sets line caps and line joins to be rounded;",
+" `butt` is the default, producing butt caps and mitered joins.",
+"",
+" The size of the plot is given in screen pixels.  By default (`anchor`) each",
+" plot is drawn at the top left of the terminal window.  This is useful for",
+" animation or pseudo-mousing using the keyboard (see `pseudo-mousing`).",
+" `scroll` instead starts each plot at the current cursor position so that it",
+" scrolls with the terminal text.",
 ""
 END_HELP(kittycairo)
 #endif /* HAVE_KITTY_TERM */
