@@ -83,6 +83,8 @@ For worked examples see http://gnuplot.info/demo_6.0/
 	o Terminals that display graphics in the same window as text entry now
 	  support pseudo-mousing; i.e. they respond to arrow keys and other
 	  hot-key bindings during "pause mouse".
+	o New terminals kittygd and kittycairo provide in-window graphics for
+	  terminal emulators that support the kitty protocol.
 	o New terminal webp generates a single frame or an animation sequence
 	  using webp encoding. Frames are generated using pngcairo,
 	  then encoded through the WebPAnimEncoder API.
